commit translated contents

--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -51,6 +51,18 @@
   href: code-samples.md
 - name: 概念
   items:
+    - name: External Identities のソリューションを比較する
+      href: 'https://docs.microsoft.com/azure/active-directory/b2b/compare-with-b2c?toc=/azure/active-directory-b2c/TOC.json&bc=/azure/active-directory-b2c/bread/toc.json'
+    - name: 基本を学ぶ
+      items:
+        - name: 認証と承認
+          href: 'https://docs.microsoft.com/azure/active-directory/develop/authentication-vs-authorization?toc=/azure/active-directory-b2c/TOC.json&bc=/azure/active-directory-b2c/bread/toc.json'
+        - name: トークン
+          href: 'https://docs.microsoft.com/azure/active-directory/develop/security-tokens?toc=/azure/active-directory-b2c/TOC.json&bc=/azure/active-directory-b2c/bread/toc.json'
+        - name: プロトコル
+          href: 'https://docs.microsoft.com/azure/active-directory/develop/v2-app-types?toc=/azure/active-directory-b2c/TOC.json&bc=/azure/active-directory-b2c/bread/toc.json'
+        - name: 認証ライブラリ
+          href: 'https://docs.microsoft.com/azure/active-directory/develop/msal-overview?toc=/azure/active-directory-b2c/TOC.json&bc=/azure/active-directory-b2c/bread/toc.json'
     - name: Azure AD B2C のベスト プラクティス
       href: best-practices.md
     - name: アプリケーションの種類
@@ -341,9 +353,11 @@
                       href: aad-sspr-technical-profile.md
                     - name: 要求の変換
                       href: claims-transformation-technical-profile.md
-                    - name: 条件付きアクセス技術プロファイル
+                    - name: 条件付きアクセス
                       href: conditional-access-technical-profile.md
                       displayName: ca
+                    - name: ID トークン ヒント
+                      href: id-token-hint.md
                     - name: JWT トークン発行者
                       href: jwt-issuer-technical-profile.md
                     - name: OAuth1
