--- a/articles/lighthouse/index.yml
+++ b/articles/lighthouse/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: JnHs
   ms.author: jenhayes
   ms.date: 07/20/2020
-  ms.openlocfilehash: 40352965db20c12e589f52f76869032d1f5f1b10
-  ms.sourcegitcommit: d18a59b2efff67934650f6ad3a2e1fe9f8269f21
+  ms.openlocfilehash: b7f8a44b8e2d049a2a558b9a78d896ac638f5d1c
+  ms.sourcegitcommit: 80b9c8ef63cc75b226db5513ad81368b8ab28a28
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/20/2020
-  ms.locfileid: "88659876"
+  ms.lasthandoff: 09/16/2020
+  ms.locfileid: "90603188"
 landingContent:
 - title: Azure Lighthouse について
   linkLists:
@@ -35,6 +35,8 @@ landingContent:
     links:
     - text: Azure Lighthouse への顧客のオンボード
       url: ./how-to/onboard-customer.md
+    - text: パートナー獲得クレジットの ID をリンクする
+      url: ./how-to/partner-earned-credit.md
   - linkListType: concept
     links:
     - text: 推奨セキュリティ プラクティス
@@ -85,6 +87,8 @@ landingContent:
       url: ./how-to/policy-at-scale.md
     - text: 修復できるポリシーをデプロイする
       url: ./how-to/deploy-policy-remediation.md
+    - text: Azure Arc を使用してハイブリッド マシンを管理する
+      url: ./how-to/manage-hybrid-infrastructure-arc.md
 - title: リファレンス - SDK
   linkLists:
   - linkListType: reference
