--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -566,10 +566,28 @@ groups:
     title: Java
   - id: programming-language-csharp
     title: C#
+- id: speech-full-stack-go
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-cpp
+    title: C++
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-go
+    title: Go
+  - id: programming-language-spx
+    title: CLI
 metadata:
-  ms.openlocfilehash: 0659c68f39493c3e3b2e66ebc5a38d96cd13404d
-  ms.sourcegitcommit: 419cf179f9597936378ed5098ef77437dbf16295
+  ms.openlocfilehash: ea50c8099a3b51a2796f26a8bad31f1209423efe
+  ms.sourcegitcommit: 7374b41bb1469f2e3ef119ffaf735f03f5fad484
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/27/2020
-  ms.locfileid: "88998919"
+  ms.lasthandoff: 09/16/2020
+  ms.locfileid: "90707664"
