--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -279,8 +279,10 @@
           href: storage-troubleshoot-windows-file-connection-problems.md
         - name: Azure Files のトラブルシューティング - Linux (SMB)
           href: storage-troubleshoot-linux-file-connection-problems.md
-        - name: Azure Files のパフォーマンスに関するトラブルシューティング (SMB)
+        - name: Azure Files のパフォーマンスに関するトラブルシューティング
           href: storage-troubleshooting-files-performance.md
+        - name: Azure Files のトラブルシューティング - Linux (NFS)
+          href: storage-troubleshooting-files-nfs.md
         - name: Azure File Sync のトラブルシューティング
           href: storage-sync-files-troubleshoot.md
         - name: Azure Files の削除に関するトラブルシューティング
