--- a/articles/index.yml
+++ b/articles/index.yml
@@ -1243,7 +1243,7 @@ productDirectory:
     azureCategories:
     - storage
     url: storage/index.yml
-  - title: ストレージ エクスプローラー
+  - title: Storage Explorer
     summary: Azure Storage リソースの表示と操作
     imageSrc: https://static.docs.com/ui/media/product/azure/storage-explorer.svg
     azureCategories:
