--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -64,6 +64,8 @@
           href: protect-avs-web-apps-with-app-gateway.md
         - name: Traffic Manager
           href: deploy-traffic-manager-to-balance-avs-workloads.md
+        - name: NetApp Files
+          href: net-app-files.md
     - name: VMware ソリューション
       items:
         - name: vRealize Operations の設定
