--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -26,6 +26,8 @@
           href: get-started-visualize-power-bi.md
         - name: 8 監視する
           href: get-started-monitor.md
+        - name: 9 Knowledge Center を調べる
+          href: get-started-knowledge-center.md
     - name: チート シート
       href: overview-cheat-sheet.md
     - name: よく寄せられる質問
