--- a/articles/governance/policy/index.yml
+++ b/articles/governance/policy/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 08/10/2020
-  ms.openlocfilehash: 66095427637b52d9bc220cba911c3099fd8f397c
-  ms.sourcegitcommit: 1aef4235aec3fd326ded18df7fdb750883809ae8
+  ms.date: 09/22/2020
+  ms.openlocfilehash: 175c01423b9d7ae987b38913b0376c333f5c9ea9
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/12/2020
-  ms.locfileid: "88135948"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90904062"
 landingContent:
 - title: Azure Policy について
   linkLists:
@@ -27,8 +27,12 @@ landingContent:
       url: ./concepts/effects.md
     - text: 定義の構造
       url: ./concepts/definition-structure.md
+    - text: スコープ
+      url: ./concepts/scope.md
     - text: 割り当ての構造
       url: ./concepts/assignment-structure.md
+    - text: 除外の構造
+      url: ./concepts/exemption-structure.md
   - linkListType: video
     links:
     - text: Build 2018 での Azure Policy
@@ -91,6 +95,8 @@ landingContent:
       url: ./how-to/get-compliance-data.md
     - text: コンプライアンス違反の原因の特定
       url: ./how-to/determine-non-compliance.md
+    - text: リソースの除外
+      url: ./concepts/exemption-structure.md
     - text: 準拠していないリソースを修復する
       url: ./how-to/remediate-resources.md
 - title: 参加する
