--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -92,8 +92,12 @@
           href: vpn-gateway-howto-multi-site-to-site-resource-manager-portal.md
         - name: 複数のポリシーベース VPN デバイスへの接続
           href: vpn-gateway-connect-multiple-policybased-rm-ps.md
-        - name: サイト間と ExpressRoute の共存接続
+    - name: ExpressRoute によるサイト間接続
+      items:
+        - name: 共存接続
           href: ../expressroute/expressroute-howto-coexist-resource-manager.md?toc=%2fazure%2fvpn-gateway%2ftoc.json
+        - name: プライベート ピアリングを介した VPN
+          href: site-to-site-vpn-private-peering.md
     - name: VNet 対 VNet 接続
       items:
         - name: VNet 間の接続の構成
@@ -134,6 +138,8 @@
               href: point-to-site-how-to-vpn-client-install-azure-cert.md
             - name: VPN クライアント構成ファイルの作成とインストール
               href: point-to-site-vpn-client-configuration-azure-cert.md
+            - name: セッションの管理
+              href: p2s-session-management.md
         - name: RADIUS 認証
           items:
             - name: P2S VPN の構成
