--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -109,6 +109,22 @@
       href: concept-recognizing-text.md
     - name: 成人向けコンテンツの検出
       href: concept-detecting-adult-content.md
+- name: 責任ある AI
+  items:
+    - name: わかりやすさに関するメモ
+      items:
+        - name: 空間分析の概要
+          href: 'https://docs.microsoft.com/legal/cognitive-services/computer-vision/intro-to-spatial-analysis-public-preview'
+        - name: 特性と制限
+          href: 'https://docs.microsoft.com/legal/cognitive-services/computer-vision/accuracy-and-limitations'
+    - name: コンプライアンス、プライバシー、セキュリティ
+      href: 'https://docs.microsoft.com/legal/cognitive-services/computer-vision/compliance-privacy-security-2'
+    - name: AI デプロイでの責任ある使用
+      href: 'https://docs.microsoft.com/legal/cognitive-services/computer-vision/responsible-use-deployment'
+    - name: 開示設計のガイドライン
+      href: 'https://docs.microsoft.com/legal/cognitive-services/computer-vision/disclosure-design'
+    - name: リサーチの分析情報
+      href: 'https://docs.microsoft.com/legal/cognitive-services/computer-vision/research-insights'
 - name: Containers
   items:
     - name: API コンテナーの読み取り
@@ -125,6 +141,20 @@
         - name: Container Instances の使用
           href: deploy-computer-vision-on-container-instances.md
           displayName: 'container instances, container, containers, images'
+    - name: 空間分析コンテナー
+      items:
+        - name: ホスト マシンをセットアップしてコンテナーを実行する
+          href: spatial-analysis-container.md
+        - name: 操作を構成する
+          href: spatial-analysis-operations.md
+        - name: 人数カウント Web アプリをデプロイする
+          href: Spatial-analysis-web-app.md
+        - name: ロギングおよびトラブルシューティング
+          href: spatial-analysis-logging.md
+        - name: ゾーンとラインの配置
+          href: spatial-analysis-zone-line-placement.md
+        - name: カメラの配置
+          href: spatial-analysis-camera-placement.md
 - name: 操作方法ガイド
   items:
     - name: Computer Vision API を呼び出す
