--- a/articles/static-web-apps/index.yml
+++ b/articles/static-web-apps/index.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Landing
 title: Azure Static Web Apps のドキュメント
-summary: Azure Static Web Apps を使用すると、GitHub で加えられた変更から自動的に発行される JavaScript Web アプリケーションを構築できます。
+summary: Azure Static Web Apps を使用すると、GitHub で加えられた変更から自動的に発行される最新の Web アプリケーションを構築できます。
 metadata:
   title: Azure Static Web Apps のドキュメント
-  description: Azure Static Web Apps を使用すると、GitHub で加えられた変更から自動的に発行される JavaScript Web アプリケーションを構築できます。
+  description: Azure Static Web Apps を使用すると、GitHub で加えられた変更から自動的に発行される最新の Web アプリケーションを構築できます。
   ms.topic: landing-page
   ms.service: static-web-apps
   author: craigshoemaker
   ms.author: cshoe
   ms.date: 04/09/2020
-  ms.openlocfilehash: f70a746c948038b5bd67f4645e8dbd3df71b8b8a
-  ms.sourcegitcommit: 3543d3b4f6c6f496d22ea5f97d8cd2700ac9a481
+  ms.openlocfilehash: a72c9ab1dfcaf6fd95ac706bc0f0a7b8adb17c0f
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/20/2020
-  ms.locfileid: "86528657"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90905353"
 landingContent:
 - title: Static Web Apps について
   linkLists:
@@ -54,6 +54,8 @@ landingContent:
       url: publish-vuepress.md
     - text: Jekyll から発行する
       url: publish-jekyll.md
+    - text: Blazor からデプロイする
+      url: deploy-blazor.md
     - text: Next.js からデプロイする
       url: deploy-nextjs.md
     - text: Nuxt.js からデプロイする
