--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -554,7 +554,7 @@
           href: download-vhd.md
     - name: VM のセキュリティ保護
       items:
-        - name: 推奨事項
+        - name: Recommendations
           href: security-recommendations.md
         - name: ジャストインタイム アクセス
           href: ../../security-center/security-center-just-in-time.md
@@ -872,6 +872,8 @@
               href: attach-disk-ps.md
             - name: Azure portal
               href: attach-managed-disk-portal.md
+        - name: ディスク層を変更する
+          href: ../disks-performance-tiers.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
         - name: ディスクを取り外す
           href: detach-disk.md
         - name: Resource Manager テンプレートによるディスクのデプロイ
