--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -38,6 +38,8 @@
       href: concepts-upgrades.md
 - name: 操作方法ガイド
   items:
+    - name: Azure VMware Solution を有効にする
+      href: enable-azure-vmware-solution.md
     - name: 移行評価
       href: ../migrate/how-to-create-azure-vmware-solution-assessment.md?context=/azure/migrate/context/migrate-context.json
     - name: HCX の設定
