--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -13,22 +13,24 @@ metadata:
   ms.author: jmartens
   ms.date: 09/17/2020
   ms.custom: contperfq1
-  ms.openlocfilehash: c103b04fff2cc0b1d5b804c16f98e63fd1aa3e87
-  ms.sourcegitcommit: 1fe5127fb5c3f43761f479078251242ae5688386
+  ms.openlocfilehash: 4359f18e51dffa26f1bfc7fbe74f5f89dff7c56f
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/14/2020
-  ms.locfileid: "90068287"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90900118"
 landingContent:
 - title: 作業を開始しましょう。コード ファースト
   linkLists:
   - linkListType: tutorial
     links:
-    - text: 作業の開始 (Python)
+    - text: Python SDK の概要 (1 日目)
+      url: tutorial-1st-experiment-sdk-setup-local.md
+    - text: Jupyter Notebook を使用する
       url: tutorial-1st-experiment-sdk-setup.md
     - text: ML パイプラインを使用したバッチ推論 (Python)
       url: tutorial-pipeline-batch-scoring-classification.md
-    - text: 作業の開始 (R)
+    - text: R を使い始める
       url: tutorial-1st-r-experiment.md
 - title: 作業を開始しましょう。コードが少ないか、またはありません
   linkLists:
