--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -12,12 +12,12 @@ metadata:
   manager: nitinme
   ms.custom: custom-portals-hub
   ms.date: 08/28/2020
-  ms.openlocfilehash: fac52ac6cc7018d2ddcaedd663abf26275f4929e
-  ms.sourcegitcommit: 656c0c38cf550327a9ee10cc936029378bc7b5a2
+  ms.openlocfilehash: 1500ac7ac362048751be3f91e6c52d4fe446bdc2
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/28/2020
-  ms.locfileid: "89074697"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90906977"
 highlightedContent:
   items:
   - title: Cognitive Services とは
@@ -84,7 +84,7 @@ conceptualContent:
       text: Text Analytics
     - url: ./translator/index.yml
       itemType: overview
-      text: Translator
+      text: '[変換者]'
   - title: 音声
     summary: 音声をテキストに変換し、テキストを自然な音声に変換します。 ある言語を別の言語に翻訳し、話者の認証と認識を可能にします。
     links:
@@ -99,10 +99,13 @@ conceptualContent:
     links:
     - url: ./anomaly-detector/index.yml
       itemType: overview
-      text: Anomaly Detector (プレビュー)
+      text: Anomaly Detector
     - url: ./content-moderator/index.yml
       itemType: overview
       text: Content Moderator
+    - url: ./metrics-advisor/index.yml
+      itemType: overview
+      text: Metrics Advisor (プレビュー)
     - url: ./personalizer/index.yml
       itemType: overview
       text: Personalizer
