--- a/articles/security-center/index.yml
+++ b/articles/security-center/index.yml
@@ -11,45 +11,51 @@ metadata:
   author: memildin
   ms.author: memildin
   ms.date: 08/17/2020
-  ms.openlocfilehash: d87e86bc1e4795be4e234cba06ddd9ab663ba3f8
-  ms.sourcegitcommit: c94a177b11a850ab30f406edb233de6923ca742a
+  ms.openlocfilehash: 0ee97ba1d0190cfb3331372329677b8ffe740439
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "89276866"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90883841"
 landingContent:
 - title: Security Center について
   linkLists:
   - linkListType: overview
     links:
     - text: Security Center の主な機能
-      url: security-center-intro.md
+      url: security-center-introduction.md
     - text: サポートされる Windows サーバーおよび Linux のバージョン
       url: security-center-os-coverage.md
+    - text: Azure Defender とは
+      url: azure-defender.md
 - title: 最新情報
   linkLists:
   - linkListType: whats-new
     links:
     - text: Security Center のリリース ノート
       url: release-notes.md
-    - text: Asset Inventory によるリソースの管理
-      url: asset-inventory.md
-    - text: 適応型アプリケーション制御のページの書き換え
-      url: security-center-adaptive-application.md
-    - text: 新しいセキュリティ制御の詳細な説明
-      url: secure-score-security-controls.md#security-controls-and-their-recommendations
+    - text: 新しい概要ページを探索する
+      url: overview-page.md
+    - text: Kubernetes ワークロードを保護する
+      url: kubernetes-workload-protections.md
+    - text: Azure Defender の Key Vault アラートに対応する
+      url: defender-for-key-vault-usage.md
     - text: セキュリティ スコア API
       url: secure-score-security-controls.md#get-your-secure-score-from-the-rest-api
 - title: はじめに
   linkLists:
   - linkListType: get-started
     links:
+    - text: Security Center 入門
+      url: security-center-get-started.md
     - text: セキュリティ ポリシーの構成
       url: tutorial-security-policy.md
     - text: セキュリティ体制の評価
       url: secure-score-security-controls.md
-    - text: 高度なセキュリティへのアップグレード
-      url: security-center-onboarding.md
+    - text: AWS アカウントを接続する
+      url: quickstart-onboard-aws.md
+    - text: GCP アカウントを接続する
+      url: quickstart-onboard-gcp.md
 - title: セキュア スコアを向上させる
   linkLists:
   - linkListType: how-to-guide
@@ -58,8 +64,8 @@ landingContent:
       url: secure-score-security-controls.md
     - text: セキュリティの推奨事項への対応
       url: security-center-remediate-recommendations.md
-    - text: セキュリティの推奨事項のカスタマイズ
-      url: tutorial-security-policy.md
+    - text: リソースを推奨事項から除外する
+      url: exempt-resource.md
     - text: 推奨事項を使用してセキュリティを強化する
       url: security-center-using-recommendations.md
     - text: セキュア スコア API を使用して追跡する
@@ -74,3 +80,7 @@ landingContent:
       url: security-center-adaptive-application.md
     - text: アダプティブ ネットワーク強化の実装
       url: security-center-adaptive-network-hardening.md
+    - text: Azure Defender を 30 日間無料で試用する
+      url: security-center-pricing.md#try-azure-defender-free-for-30-days
+    - text: Azure Defender ダッシュボードを使用する
+      url: azure-defender-dashboard.md
